// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CountryCard CountryCard component should match snapshot 1`] = `
<section
  className="country-card"
>
  <p
    className="country-name"
  >
    Benin
  </p>
  <p
    className="country-capital"
  >
    Capital of Benin
  </p>
  <p
    className="country-region"
  >
    Region of Benin
  </p>
  <div
    className="div-status"
  >
    <button
      className="button-study-status"
      onClick={[Function]}
    >
      Got It!
    </button>
  </div>
</section>
`;

exports[`CountryCard CountryCard component should match snapshot when needsStudied is false 1`] = `
<section
  className="country-card"
>
  <p
    className="country-name"
  />
  <p
    className="country-capital"
  />
  <p
    className="country-region"
  />
  <div
    className="div-status"
  >
    <button
      className="button-study-status"
      onClick={[Function]}
    >
      Still Learning
    </button>
    <img
      alt="checked checkbox"
      className="img-checkbox"
      src="check-box-checked.svg"
    />
  </div>
</section>
`;
